Submit Manual Files Update

--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -9,7 +9,7 @@
         <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Organizations</h4>
-                <p class="card-text" id="orgsCount">Place Holder </p>
+                <p class="card-text" id="orgsCount"></p>
                
             </div>
         </div>
@@ -17,7 +17,7 @@
         <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Academic Sessions</h4>
-                <p class="card-text" id="sessionsCount">Place Holder</p>
+                <p class="card-text" id="sessionsCount"></p>
                
             </div>
         </div>
@@ -25,7 +25,7 @@
         <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Users</h4>
-                <p class="card-text" id="usersCount">Place Holder</p>
+                <p class="card-text" id="usersCount"></p>
             </div>
         </div>
     </div>
@@ -37,21 +37,21 @@
         <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Courses</h4>
-                <p class="card-text" id="coursesCount">Place Holder</p>
+                <p class="card-text" id="coursesCount"></p>
             </div>
         </div>
         <!--Classes Card-->
         <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Classes</h4>
-                <p class="card-text" id="classesCount">Place Holder</p>
+                <p class="card-text" id="classesCount"></p>
             </div>
         </div>
         <!--Enrollments Card-->
         <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h4 class="card-title">Enrollments</h4>
-                <p class="card-text" id="enrollmentsCount">Place Holder</p>
+                <p class="card-text" id="enrollmentsCount"></p>
             </div>
         </div>
     </div>
