--- a/Views/RosterData/Users.cshtml
+++ b/Views/RosterData/Users.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Roster Data";
 }
 <div class="row">
-    <div class="col-sm-3">
+    <div class="col-sm-1">
         <div class="nav flex-column nav-pills" id="v-pills-tab" aria-orientation="vertical">
             <ul class="nav navbar-nav" role="tablist">
                 <li class="nav-item">
@@ -28,7 +28,7 @@
 
         </div>
     </div>
-    <div class="col-md-9">
+    <div class="col-lg-9">
         @if (Model.Count() > 0)
         {
             <table class="table">
