--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </nav>-->
-        <div class="row d-flex justify-content-center">
+        <div class="row">
             @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
             {
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
