--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,10 +32,9 @@
                 </div>
             </div>
         </nav>-->
-        <div class="row">
-            @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+         @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
             {
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar sticky-top navbar-expand-lg">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -109,7 +108,6 @@
                     </div>
                 </nav>
             }
-        </div>
     </header>
     <div class="container-fluid">
         <main role="main" class="pb-3">
