--- a/Views/RosterData/Users.cshtml
+++ b/Views/RosterData/Users.cshtml
@@ -2,124 +2,21 @@
 @{
     ViewData["Title"] = "Roster Data";
 }
-<div class="row">
-    <div class="col-">
-        <div class="nav flex-column nav-pills" id="v-pills-tab" aria-orientation="vertical">
-            <ul class="nav navbar-nav" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="RosterData" asp-action="Orgs" role="tab" aria-controls="v-pills-orgs" aria-selected="true">Organizations</a>
-                </li>
-                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="RosterData" asp-action="Sessions" role="tab" aria-controls="v-pills-sessions" aria-selected="true">Academic Sessions</a>
-                </li>
-                 <li class="nav-item">
-                    <a class="nav-link active" asp-area="" asp-controller="RosterData" asp-action="Users" role="tab" aria-controls="v-pills-users" aria-selected="true">Users</a>
-                </li>
-                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="RosterData" asp-action="Courses" role="tab" aria-controls="v-pills-courses" aria-selected="true">Courses</a>
-                </li>
-                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="RosterData" asp-action="Classes" role="tab" aria-controls="v-pills-classes" aria-selected="true">Classes</a>
-                </li>
-                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="RosterData" asp-action="Enrollments" role="tab" aria-controls="v-pills-enrollments" aria-selected="true">Enrollments</a>
-                </li>
-            </ul>
-
-        </div>
-    </div>
-    <div class="col">
-        <div class="table-responsive-md">
-        @if (Model.Count() > 0)
-        {
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.UserSourcedId)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.Status)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.DateLastModified)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.Username)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.GivenName)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.FamilyName)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.Role)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.Identifier)
-                            <i class="bi bi-sort-up"></i>
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.Email)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.QrCode)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(mode => mode.IdPicPath)
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.UserSourcedId)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Status)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DateLastModified)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Username)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.GivenName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.FamilyName)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Role)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Identifier)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Email)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.QrCode)
-                            </td>
-                            <td>
-                                @if (item.IdPicPath != null)
-                                {
-                                    <p>Uploaded</p>
-                                }
-                                else
-                                {
-                                    <p>N/A</p>
-                                }
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        }
-    </div>
-    </div>
+<div class="container-fluid">
+    <table id="userDataTable" class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>Source Id</th>
+                <th>Status</th>
+                <th>Username</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Role</th>
+                <th>Identifier</th>
+                <th>Email</th>
+                <th>Qr Code</th>
+                <th>Id Pic</th>
+            </tr>
+        </thead>
+    </table>
 </div>
